<resources>
    <string name="app_name">RecorDream</string>

    <!--메인뷰-->
    <string name="tv_main_welcoming">반가워요, %s님!</string>
    <string name="tv_main_welcoming2">그동안 어떤 꿈을 꾸셨나요?</string>
    <string name="tv_main_welcoming_new">꿈의 기록을 채워주세요.</string>
    <string name="tv_main_welcoming_new_detail">홈에서는 랜덤으로 10가지 꿈을 볼 수 있어요</string>

    <!-- 바텀네비게이션 -->
    <string name="bnv_main_home">홈</string>
    <string name="bnv_main_write">기록하기</string>
    <string name="bnv_main_storage">보관함</string>


    <!-- 로그인 뷰 -->
    <string name="tv_login_kakaobtn">카카오로 시작하기</string>
    <string name="tv_login_guide">로그인 후 이용이 가능합니다.</string>

    <!--보관함 뷰-->
    <string name="store_myemotion">나의 감정</string>
    <string name="store_description">오늘 친구들이랑 피자 먹고 너무 좋았는데 어쭈구리 쭈굴..</string>
    <string name="store_day">2022/06/26 SUN</string>
    <string name="store_no_record">아직 기록된 꿈이 없어요.</string>
    <string name="store_records_count">%1$d개의 기록</string>

    <!--마이페이지 뷰-->
    <string name="mypage">마이페이지</string>
    <string name="mypage_name">12345678</string>
    <string name="mypage_email">123456678@naevr.com</string>
    <string name="mypage_dream_push">꿈 푸시알림</string>
    <string name="mypage_setting_time">시간 설정</string>
    <string name="mypage_setting_description">설정한 시간에 푸시알림을 통해 꿈을 바로 기록할 수 있어요!</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_delete_account_line"><u>탈퇴하기</u></string>
    <string name="mypage_delete_account">탈퇴하기</string>
    <string name="mypage_bottom_cancle">취소</string>
    <string name="mypage_bottom_save">저장</string>
    <string name="mypage_delete_description">탈퇴 시 저장된 기록은 복구되지 않습니다.\n 정말로 탈퇴하시겠습니까?</string>
    <string name="mypage_delete">탈퇴</string>
    <string name="mypage_name_warning">1~8자까지 가능합니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mypage_setting_time_description">%2$s %2$s:%2s</string>
    <string name="mypage_alarm_No">권한이 거부되었습니다. 푸시알림 기능 이용을 원하신다면 권한을 허가해주세요.</string>
    <string name="mypage_alarm_else">권한 요청이 중단되었습니다. 푸시알림 기능 이용을 원하신다면 권한을 허가해주세요.</string>
    <string name="mypage_alarm_yes">권한이 허가되어 푸시알림 기능을 이용하실 수 있습니다.</string>
    <string name="myopage_format_date">%02d</string>

    <!-- 기록하기 뷰 -->
    <string name="tv_record_create">기록하기</string>
    <string name="tv_record_edit">수정하기</string>
    <string name="tv_record_date">날짜</string>
    <string name="tv_record_voice_record">음성녹음</string>
    <string name="tv_record_hint_title">꿈의 제목을 남겨주세요.</string>
    <string name="tv_record_content">무슨 꿈을 꾸셨나요?</string>
    <string name="tv_record_emotion">나의 감정</string>
    <string name="tv_record_genre">꿈의 장르</string>
    <string name="tv_record_warning_max_genre">꿈의 장르는 최대 3개까지만 선택할 수 있어요.</string>
    <string name="tv_record_warning_disable_recording">수정하기에서는 녹음할 수 없어요.</string>
    <string name="tv_record_warning_editable_recording">녹음은 수정할 수 없어요.</string>
    <string name="tv_record_note">노트</string>
    <string name="tv_record_hint_note">꿈에 대해 따로 기록할 게 있나요?</string>
    <string name="tv_record_hint_content">무슨 꿈을 꾸셨나요?</string>

    <string name="tv_record_save">저장하기</string>
    <string name="tv_record_tools_date">2022-06-27</string>
    <string name="tv_record_tools_time">00:00</string>
    <string name="tv_record_comedy"># 코미디</string>
    <string name="tv_record_romance"># 로맨스</string>
    <string name="tv_record_fantasy"># 판타지</string>
    <string name="tv_record_horror"># 공포</string>
    <string name="tv_record_animal"># 동물</string>
    <string name="tv_record_friend"># 친구</string>
    <string name="tv_record_family"># 가족</string>
    <string name="tv_record_food"># 음식</string>
    <string name="tv_record_work"># 일</string>
    <string name="tv_record_etc"># 기타</string>

    <string name="tv_record_joy">기쁜</string>
    <string name="tv_record_sad">슬픈</string>
    <string name="tv_record_scary">무서운</string>
    <string name="tv_record_strange">이상한</string>
    <string name="tv_record_shy">민망한</string>
    <string name="tv_record_all">전체</string>
    <string name="tv_record_warning_genre">꿈의 장르는 최대 3개까지만 선택할 수 있어요.</string>
    <string name="default_time_format">03:00</string>
    <string name="tv_record_warning_save">꿈의 제목을 입력해주세요.</string>


    <!-- 음성녹음 뷰 -->
    <string name="tv_recording_record">음성녹음</string>

    <!-- 상세보기 뷰 -->
    <string name="tv_dream_record_title">나의 꿈 기록</string>


    <!--  검색 뷰 -->
    <string name="tv_search_view_title">검색하기</string>
    <string name="tv_search_description">검색어 입력</string>
    <string name="et_search_enter">어떤 기록을 찾고 있나요?</string>
    <string name="tv_search_count_record">%d개의 기록</string>
    <string name="tv_search_no_count">찾으시는 기록이 없어요.</string>
    <string name="genre_name_comedy"># 코미디</string>
    <string name="genre_name_romance"># 로맨스</string>
    <string name="genre_name_fantasy"># 판타지</string>
    <string name="genre_name_horror"># 호러</string>
    <string name="genre_name_animal"># 동물</string>
    <string name="genre_name_friend"># 친구</string>
    <string name="genre_name_family"># 가족</string>
    <string name="genre_name_food"># 음식</string>
    <string name="genre_name_work"># 일</string>
    <string name="genre_name_etc"># 기타</string>
    <string name="genre_name_nothing"># 아직 설정되지 않았어요</string>

    <!--    facebook 앱 id-->
    <string name="facebook_app_id">4432324493558166</string>
    <!--BASE ERROR-->
    <string name="error_basefragment">"[ERROR]Binding no initialization"</string>
    <string name="document_title">기록 상세보기</string>

    <string name="network_error">네트워크에 연결할 수 없습니다. 확인 후 다시 시도해 주세요.</string>
    <string name="tv_note_title">노트</string>

</resources>