<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.record.RecordActivity">

        <TextView
            android:id="@+id/tv_record_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:paddingTop="22dp"
            android:paddingBottom="17dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="208dp" />

        <TextView
            android:id="@+id/tv_record_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/tv_record_record"
            android:textAppearance="@style/Sb16"
            android:textColor="@color/white01_FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/tv_record_save_btn"
            app:layout_constraintTop_toBottomOf="@+id/v_record_indicator"
            tools:layout_editor_absoluteX="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                    <ImageView
                        android:id="@+id/iv_record_mic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_mic_s" />

                    <TextView
                        android:id="@+id/tv_record_voice_recording"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginBottom="21dp"
                        android:textAppearance="@style/M14"
                        android:textColor="@color/white01_FFFFFF"
                        android:text="@string/tv_record_voice_record"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_record_mic"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_record_recording_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="21dp"
                        tools:text="@string/tv_record_tools_time"
                        android:textAppearance="@style/M14"
                        android:textColor="@color/white01_FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_record_voice"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_record_voice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_rd_voice" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_record_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="21dp"
                        android:layout_marginBottom="21dp"
                        android:text="@string/tv_record_date"
                        android:textAppearance="@style/M14"
                        android:textColor="@color/white01_FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/iv_record_calendar"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/iv_record_calendar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_calendar" />

                    <TextView
                        android:id="@+id/tv_record_date_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="21dp"
                        android:layout_marginEnd="6dp"
                        android:layout_marginBottom="21dp"
                        android:textAppearance="@style/M14"
                        android:textColor="@color/white01_FFFFFF"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/iv_record_arrow"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/tv_record_tools_date" />

                    <ImageView
                        android:id="@+id/iv_record_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/icn_arrow" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tv_record_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="15dp"
                    android:paddingTop="21dp"
                    android:paddingBottom="21dp"
                    android:paddingStart="16dp"
                    android:hint="@string/tv_record_hint_title"
                    android:textAppearance="@style/M14"
                    android:textColor="@color/white03_66FFFFFF"
                    tools:text="@string/tv_record_hint_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

                <TextView
                    android:id="@+id/tv_record_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="15dp"
                    android:paddingStart="16dp"
                    android:paddingTop="21dp"
                    android:hint="@string/tv_record_hint_note"
                    tools:text="@string/tv_record_hint_note"
                    android:textAppearance="@style/M14"
                    android:textColor="@color/white03_66FFFFFF"
                    android:minLines="10"
                    android:overScrollMode="always"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_record_title" />

                <TextView
                    android:id="@+id/tv_record_emotion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/Sb14"
                    android:textColor="@color/white01_FFFFFF"
                    android:text="@string/tv_record_emotion"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_record_content" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="26dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_record_emotion" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/Sb14"
                    android:textColor="@color/white01_FFFFFF"
                    android:text="@string/tv_record_genre"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/selector_color_white_purple"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="11dp"
                    tools:layout_editor_absoluteY="557dp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="556dp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="156dp"
                    tools:layout_editor_absoluteY="554dp" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="236dp"
                    tools:layout_editor_absoluteY="556dp" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="303dp"
                    tools:layout_editor_absoluteY="553dp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="10dp"
                    tools:layout_editor_absoluteY="583dp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="86dp"
                    tools:layout_editor_absoluteY="581dp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="155dp"
                    tools:layout_editor_absoluteY="586dp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="229dp"
                    tools:layout_editor_absoluteY="579dp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    tools:layout_editor_absoluteX="297dp"
                    tools:layout_editor_absoluteY="580dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/iv_record_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="31dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icn_close" />

        <View
            android:id="@+id/v_record_indicator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="19dp"
            android:background="@color/white05_1AFFFFFF"
            app:layout_constraintTop_toBottomOf="@+id/tv_record_record" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>